--- a/index.html
+++ b/index.html
@@ -1,13 +1,212 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+<!DOCTYPE html>
+<html lang="cs">
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Střední odborná škola Digital</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+
+<body>
+
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg bg-white shadow-sm">
+    <div class="container">
+      <a class="navbar-brand d-flex align-items-center" href="#" aria-label="SOŠ Digital - domů">
+        <img src="Images/logo.svg" alt="SOŠ Digital logo" class="me-2" style="height:40px; width:auto;">
+        <span class="text-primary fw-bold">soš Digital</span>
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu"
+        aria-controls="navmenu" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navmenu">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="#">Studijní obory</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Novinky</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Nadcházející události</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Kontakt</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Hero Section -->
+  <section class="text-start p-4 bg-white">
+    <div class="container">
+      <div class="badge bg-primary text-white fw-bold p-2 rounded-3 mb-3" style="font-size: 12px;">
+        Fiktivní ukázkový web
+      </div>
+      <h1 class="mt-2 mb-2 fw-bold" style="font-size: 34px;">Střední odborná škola Digital</h1>
+      <p class="mb-1 text-muted" style="font-size: 15px; margin-top: 6px;">
+        Moderní vzdělávání v IT, designu a digitálních médiích
+      </p>
+      <p class="mb-3 text-muted" style="font-size: 15px;">
+        Studujte u nás, jsme vaše <i>jednička!</i>
+      </p>
+      <div class="d-flex gap-2 mb-3">
+        <a class="btn btn-outline-primary" href="#">Studijní obory</a>
+        <a class="btn btn-outline-primary" href="#">Nejčastější dotazy</a>
+      </div>
+      <div class="d-flex gap-4 align-items-center mb-3">
+        <div><strong>45 000+</strong><div class="text-muted" style="font-size: 12px;">Absolventů</div></div>
+        <div><strong>150</strong><div class="text-muted" style="font-size: 12px;">Let zkušeností</div></div>
+        <div><strong>99%</strong><div class="text-muted" style="font-size: 12px;">Uplatnění</div></div>
+      </div>
+      <img src="Images/hero-image.webp" alt="škola - náhled" class="img-fluid rounded shadow-sm">
+    </div>
+  </section>
+
+  
+  <section class="container my-5">
+    <h2 class="mb-4">Studijní obory</h2>
+    <div class="row g-4">
+      <div class="col-md-4">
+        <div class="card shadow-sm">
+          <div class="card-body">Fotografie<br><small>Ateliér, práce se světlem, postprodukce.</small></div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card shadow-sm">
+          <div class="card-body">Video<br><small>Střih, color grading, zvuk, produkce.</small></div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card shadow-sm">
+          <div class="card-body">Audio<br><small>Podcasty, hudební produkce, mix a mastering.</small></div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Novinky -->
+  <section class="bg-light py-5">
+    <div class="container">
+      <h2 class="mb-4">Novinky</h2>
+      <form class="d-flex mb-4" role="search">
+        <input class="form-control me-2" type="search" placeholder="Hledat novinky..." aria-label="Search">
+        <button class="btn btn-outline-primary" type="submit">Hledat</button>
+      </form>
+      <div class="row g-4">
+        <div class="col-md-4">
+          <div class="card shadow-sm"><img src="Images/novinky-dod.webp" class="card-img-top">
+            <div class="card-body">
+              <h5>Den otevřených dveří – říjen</h5>
+              <p>Zveme uchazeče a rodiče na prohlídku školy, laboratoří a ateliéru.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card shadow-sm"><img src="Images/novinky-iot.webp" class="card-img-top">
+            <div class="card-body">
+              <h5>Úspěch v soutěži WebExpo Student</h5>
+              <p>Náš tým obsadil 2. místo s projektem rychlé kampaně pro neziskovku.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card shadow-sm"><img src="Images/novinky-vr.webp" class="card-img-top">
+            <div class="card-body">
+              <h5>Nové VR studio</h5>
+              <p>Rozšiřujeme multimediální výuku o virtuální realitu a 3D scanning</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Nadcházející události -->
+  <section class="container my-5">
+    <h2 class="mb-4">Nadcházející události</h2>
+    <div class="list-group">
+      <div class="list-group-item d-flex align-items-center">
+        <div class="bg-primary text-white p-3 rounded-3 me-3">
+          <div style="font-size:18px; line-height:1;">12</div>
+          <div style="font-size:12px; text-transform:lowercase;">září</div>
+        </div>
+        <div>
+          <div class="fw-bold">Workshop - Základy UX</div>
+          <div class="text-muted" style="font-size: 13px;">Atelyér A2, 14:00-17:00</div>
+        </div>
+        <div class="ms-auto"><span class="badge bg-warning text-dark fw-bold rounded-3 py-1 px-3">Workshop</span></div>
+      </div>
+
+      <div class="list-group-item d-flex align-items-center">
+        <div class="bg-primary text-white p-3 rounded-3 me-3">
+          <div style="font-size:18px; line-height:1;">27</div>
+          <div style="font-size:12px; text-transform:lowercase;">září</div>
+        </div>
+        <div>
+          <div class="fw-bold">Přednáška - Kyberbezpečnost v praxi</div>
+          <div class="text-muted" style="font-size: 13px;">Aula, 10:00</div>
+        </div>
+        <div class="ms-auto"><span class="badge bg-info text-dark fw-bold rounded-3 py-1 px-3">Přednáška</span></div>
+      </div>
+
+      <div class="list-group-item d-flex align-items-center">
+        <div class="bg-primary text-white p-3 rounded-3 me-3">
+          <div style="font-size:18px; line-height:1;">6</div>
+          <div style="font-size:12px; text-transform:lowercase;">říjen</div>
+        </div>
+        <div>
+          <div class="fw-bold">Den otevřených dveří</div>
+          <div class="text-muted" style="font-size: 13px;">Celá škola, 9:00-16:00</div>
+        </div>
+        <div class="ms-auto"><span class="badge bg-success text-white fw-bold rounded-3 py-1 px-3">Pro veřejnost</span></div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Kontakt -->
+  <section class="container my-5">
+    <h2 class="mb-4">Kontakt</h2>
+    <div class="row">
+      <div class="col-md-6">
+        <div class="card">
+          <div class="card-header bg-primary text-white">Kontaktní informace</div>
+          <div class="card-body">
+            <p><strong>Adresa:</strong> Náměstí Svobody 123, 110 00 Praha</p>
+            <p><strong>Email:</strong> info@sosdigital.cz</p>
+            <p><strong>Telefon:</strong> +420 123 456 789</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="card">
+          <div class="card-header bg-primary text-white">Kontaktní formulář</div>
+          <div class="card-body">
+            <form>
+              <div class="mb-3">
+                <label for="name" class="form-label">Vaše jméno</label>
+                <input type="text" class="form-control" id="name" placeholder="Vaše jméno">
+              </div>
+              <div class="mb-3">
+                <label for="email" class="form-label">Email</label>
+                <input type="email" class="form-control" id="email" placeholder="Váš email">
+              </div>
+              <div class="mb-3">
+                <label for="message" class="form-label">Zpráva</label>
+                <textarea class="form-control" id="message" rows="3" placeholder="Vaše zpráva"></textarea>
+              </div>
+              <button type="submit" class="btn btn-primary">Odeslat</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="bg-dark text-white py-4">
+    <div class="container text-center">
+      <p>&copy; 2025 Střední odborná škola Digital | Všechna práva vyhrazena</p>
+    </div>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+</body>
+
 </html>
