--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <nav class="navbar navbar-expand-lg bg-white shadow-sm">
     <div class="container">
       <a class="navbar-brand d-flex align-items-center" href="#" aria-label="SOŠ Digital - domů">
-        <img src="Images/logo.svg" alt="SOŠ Digital logo" class="me-2" style="height:40px; width:auto;">
+        <img src="public/logo.svg" alt="SOŠ Digital logo" class="me-2" style="height:40px; width:auto;">
         <span class="text-primary fw-bold">soš Digital</span>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu"
@@ -32,7 +32,7 @@
     </div>
   </nav>
 
-  <!-- Hero Section -->
+  
   <section class="text-start p-4 bg-white">
     <div class="container">
       <div class="badge bg-primary text-white fw-bold p-2 rounded-3 mb-3" style="font-size: 12px;">
@@ -54,7 +54,7 @@
         <div><strong>150</strong><div class="text-muted" style="font-size: 12px;">Let zkušeností</div></div>
         <div><strong>99%</strong><div class="text-muted" style="font-size: 12px;">Uplatnění</div></div>
       </div>
-      <img src="Images/hero-image.webp" alt="škola - náhled" class="img-fluid rounded shadow-sm">
+      <img src="public/hero-image.webp" alt="škola - náhled" class="img-fluid rounded shadow-sm">
     </div>
   </section>
 
@@ -90,7 +90,7 @@
       </form>
       <div class="row g-4">
         <div class="col-md-4">
-          <div class="card shadow-sm"><img src="Images/novinky-dod.webp" class="card-img-top">
+          <div class="card shadow-sm"><img src="public/novinky-dod.webp" class="card-img-top">
             <div class="card-body">
               <h5>Den otevřených dveří – říjen</h5>
               <p>Zveme uchazeče a rodiče na prohlídku školy, laboratoří a ateliéru.</p>
@@ -98,7 +98,7 @@
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card shadow-sm"><img src="Images/novinky-iot.webp" class="card-img-top">
+          <div class="card shadow-sm"><img src="public/novinky-iot.webp" class="card-img-top">
             <div class="card-body">
               <h5>Úspěch v soutěži WebExpo Student</h5>
               <p>Náš tým obsadil 2. místo s projektem rychlé kampaně pro neziskovku.</p>
@@ -106,7 +106,7 @@
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card shadow-sm"><img src="Images/novinky-vr.webp" class="card-img-top">
+          <div class="card shadow-sm"><img src="public/novinky-vr.webp" class="card-img-top">
             <div class="card-body">
               <h5>Nové VR studio</h5>
               <p>Rozšiřujeme multimediální výuku o virtuální realitu a 3D scanning</p>
@@ -159,7 +159,6 @@
     </div>
   </section>
 
-  <!-- Kontakt -->
   <section class="container my-5">
     <h2 class="mb-4">Kontakt</h2>
     <div class="row">
